--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- That Open Engine -->
     <script type="module">
-      import * as OBC from "https://cdn.jsdelivr.net/npm/@thatopen/components@latest";
+          import * as OBC from "https://cdn.jsdelivr.net/npm/@thatopen/components@latest/dist/index.js";
 
       const container = document.getElementById("viewer-container");
       const dropHint = document.getElementById("drop-hint");
