--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <!-- That Open Engine -->
     <script type="module">
-          import * as OBC from "https://cdn.jsdelivr.net/npm/@thatopen/components@latest/dist/index.js";
-
+          import * as OBC from "https://cdn.jsdelivr.net/npm/@thatopen/components@latest";
+      
       const container = document.getElementById("viewer-container");
       const dropHint = document.getElementById("drop-hint");
 
