--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
     </div>
 
     <script type="module">
+
+      document.addEventListener("dragover", (event) => event.preventDefault());
+      document.addEventListener("drop", (event) => event.preventDefault());
+      
       import * as OBC from "https://cdn.jsdelivr.net/npm/@thatopen/components@latest/dist/index.js?module";
 
       const container = document.getElementById("viewer-container");
