--- a/index.html
+++ b/index.html
@@ -41,47 +41,37 @@
 
     <script type="module">
 
-      document.addEventListener("dragover", (event) => event.preventDefault());
-      document.addEventListener("drop", (event) => event.preventDefault());
-      
-      import * as OBC from "https://cdn.jsdelivr.net/npm/@thatopen/components@latest/dist/index.js?module";
+    document.addEventListener("dragover", (event) => event.preventDefault());
+  document.addEventListener("drop", (event) => event.preventDefault());
 
-      const container = document.getElementById("viewer-container");
-      const dropHint = document.getElementById("drop-hint");
+  import * as OBC from "https://cdn.jsdelivr.net/npm/@thatopen/components@latest/dist/index.js?module";
 
-      const components = new OBC.Components();
-      components.add(OBC.Camera);
-      components.add(OBC.Scene);
-      components.add(OBC.Renderer);
-      components.add(OBC.SimpleGrid);
-      components.add(OBC.AxesHelper);
-      components.add(OBC.Postproduction);
+  const container = document.getElementById("viewer-container");
+  const dropHint = document.getElementById("drop-hint");
 
-      const viewer = new OBC.Viewer(container);
-      viewer.setComponents(components);
+  const components = new OBC.Components();
+  components.add(OBC.Camera);
+  components.add(OBC.Scene);
+  components.add(OBC.Renderer);
+  components.add(OBC.SimpleGrid);
+  components.add(OBC.AxesHelper);
+  components.add(OBC.Postproduction);
 
-      components.add(OBC.IfcLoader);
-      const ifcLoader = components.get(OBC.IfcLoader);
+  const viewer = new OBC.Viewer(container);
+  viewer.setComponents(components);
 
-      container.addEventListener("dragover", (event) => {
-        event.preventDefault();
-        dropHint.style.opacity = 1;
-        event.dataTransfer.dropEffect = "copy";
-      });
+  components.add(OBC.IfcLoader);
+  const ifcLoader = components.get(OBC.IfcLoader);
 
-      container.addEventListener("dragleave", () => {
-        dropHint.style.opacity = 0.6;
-      });
-
-      container.addEventListener("drop", async (event) => {
-        event.preventDefault();
-        dropHint.style.display = "none";
-        const file = event.dataTransfer.files[0];
-        if (file && file.name.endsWith(".ifc")) {
-          const url = URL.createObjectURL(file);
-          await ifcLoader.load(url);
-        }
-      });
+  // Só o drop dentro da zona correta
+  container.addEventListener("drop", async (event) => {
+    dropHint.style.display = "none";
+    const file = event.dataTransfer.files[0];
+    if (file && file.name.endsWith(".ifc")) {
+      const url = URL.createObjectURL(file);
+      await ifcLoader.load(url);
+    }
+  });
     </script>
   </body>
 </html>
