--- a/index.html
+++ b/index.html
@@ -1,84 +1,58 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Visualizador IFC</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IFC Viewer</title>
     <style>
       html, body {
         margin: 0;
         height: 100%;
         overflow: hidden;
-        font-family: sans-serif;
       }
 
-      #viewer-container {
+      #container {
         width: 100%;
-        height: 100vh;
-        background: #222;
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
+        height: 100%;
       }
 
-      #drop-hint {
+      .options-menu {
         position: absolute;
+        top: 10px;
+        right: 10px;
         z-index: 10;
-        color: white;
-        font-size: 1.2em;
-        background: rgba(0, 0, 0, 0.6);
-        padding: 1em;
-        border-radius: 10px;
-        pointer-events: none;
-        transition: opacity 0.3s ease;
+      }
+
+      .phone-menu-toggler {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        z-index: 10;
+      }
+
+      .options-menu-visible {
+        display: block !important;
       }
     </style>
   </head>
   <body>
-    <div id="viewer-container">
-      <div id="drop-hint">Arraste aqui um ficheiro IFC</div>
-    </div>
+    <div id="container"></div>
 
-    <script type="module">
-  import * as OBC from "https://cdn.skypack.dev/@thatopen/components";
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://cdn.skypack.dev/three",
+          "web-ifc": "https://cdn.jsdelivr.net/npm/web-ifc@0.0.66/web-ifc-api.js",
+          "@thatopen/ui": "https://cdn.jsdelivr.net/npm/@thatopen/ui/+esm",
+          "@thatopen/components": "https://cdn.jsdelivr.net/npm/@thatopen/components/+esm",
+          "stats.js": "https://cdn.jsdelivr.net/npm/stats.js/+esm"
+        }
+      }
+    </script>
 
-  // ✅ Prevenir comportamento em toda a janela
-  window.addEventListener("dragover", (e) => {
-    e.preventDefault();
-    e.stopPropagation();
-  });
+    <script type="module" src="main.js"></script>
+  </body>
+</html>
 
-  window.addEventListener("drop", (e) => {
-    e.preventDefault();
-    e.stopPropagation();
-  });
-
-  const container = document.getElementById("viewer-container");
-  const dropHint = document.getElementById("drop-hint");
-
-  const components = new OBC.Components();
-  components.add(OBC.Camera);
-  components.add(OBC.Scene);
-  components.add(OBC.Renderer);
-  components.add(OBC.SimpleGrid);
-  components.add(OBC.AxesHelper);
-  components.add(OBC.Postproduction);
-
-  const viewer = new OBC.Viewer(container);
-  viewer.setComponents(components);
-
-  components.add(OBC.IfcLoader);
-  const ifcLoader = components.get(OBC.IfcLoader);
-
-  container.addEventListener("drop", async (event) => {
-    dropHint.style.display = "none";
-    const file = event.dataTransfer.files[0];
-    if (file && file.name.endsWith(".ifc")) {
-      const url = URL.createObjectURL(file);
-      await ifcLoader.load(url);
-    }
   });
 </script>
 
